--- a/Assignment 2/Linear Regression.ipynb
+++ b/Assignment 2/Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "9502381b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from pandas.core.common import random_state\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error"
    ]
   },
   {
@@ -932,6 +933,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "a5471580",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient: [[9312.57512673]]\n",
+      "Intercept: [26780.09915063]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Regressor coefficients and intercept\n",
+    "print(f'Coefficient: {regressor.coef_}')\n",
+    "print(f'Intercept: {regressor.intercept_}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d24af66a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (MAE): 2446.17\n",
+      "Mean Squared Error (MSE): 12823412.30\n",
+      "Root Mean Squared Error (RMSE): 3580.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MAE, MSE, RMSE\n",
+    "mae = mean_absolute_error(y_test, y_pred_test)\n",
+    "mse = mean_squared_error(y_test, y_pred_test)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f\"Mean Absolute Error (MAE): {mae:.2f}\")\n",
+    "print(f\"Mean Squared Error (MSE): {mse:.2f}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "6895e3de",
    "metadata": {},
@@ -957,27 +1006,6 @@
     "plt.legend(['X_train/Pred(y_test)', 'X_train/y_train'], title = 'Sal/Exp', loc='best', facecolor='white')\n",
     "plt.box(False)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a5471580",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficient: [[9312.57512673]]\n",
-      "Intercept: [26780.09915063]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Regressor coefficients and intercept\n",
-    "print(f'Coefficient: {regressor.coef_}')\n",
-    "print(f'Intercept: {regressor.intercept_}')"
    ]
   }
  ],
