--- a/Assignment 4/Naive Bayes.ipynb
+++ b/Assignment 4/Naive Bayes.ipynb
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e63ab1f1",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
     "labels=[\"Fullt Paid\",\"Not Fully Paid\"]\n",
     "cm=confusion_matrix(y_test,y_pred)\n",
     "disp=ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=labels)\n",
-    "disp.plot();"
+    "disp.plot()"
    ]
   },
   {
